--- a/CSFirstScheme/Common/Common.csproj
+++ b/CSFirstScheme/Common/Common.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A145961F-5680-4D63-9B0B-BE744F687360}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Common</RootNamespace>
-    <AssemblyName>Common</AssemblyName>
+    <RootNamespace>CSFirstScheme.Common</RootNamespace>
+    <AssemblyName>CSFirstScheme.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
